# CPP-PluginTest

./: CMakeLists.txt  main.cpp  plugin_a.cpp  plugin_a.hpp  plugin_b.cpp  plugin_b.hpp  plugin_base.hpp
